syntax = "proto3";

package vertex_products;

message ProductsResponse {
    string status = 1;
    ProductsData data = 2;
    string request_type = 3;
  }
  
  message ProductsData {
    repeated ProductDetail spot_products = 1;
    // Add perp_products if needed
  }
  
  message ProductDetail {
    uint32 product_id = 1;
    string oracle_price_x18 = 2;
    Risk risk = 3;
    Config config = 4;
    State state = 5;
    LPState lp_state = 6;
    BookInfo book_info = 7;
  }
  
  message Risk {
    string long_weight_initial_x18 = 1;
    string short_weight_initial_x18 = 2;
    string long_weight_maintenance_x18 = 3;
    string short_weight_maintenance_x18 = 4;
    string large_position_penalty_x18 = 5;
  }
  
  message Config {
    string token = 1;
    string interest_inflection_util_x18 = 2;
    string interest_floor_x18 = 3;
    string interest_small_cap_x18 = 4;
    string interest_large_cap_x18 = 5;
  }
  
  message State {
    string cumulative_deposits_multiplier_x18 = 1;
    string cumulative_borrows_multiplier_x18 = 2;
    string total_deposits_normalized = 3;
    string total_borrows_normalized = 4;
  }
  
  message LPState {
    string supply = 1;
    Quote quote = 2;
    Base base = 3;
  }
  
  message Quote {
    string amount = 1;
    string last_cumulative_multiplier_x18 = 2;
  }
  
  message Base {
    string amount = 1;
    string last_cumulative_multiplier_x18 = 2;
  }
  
  message BookInfo {
    string size_increment = 1;
    string price_increment_x18 = 2;
    string min_size = 3;
    string collected_fees = 4;
    string lp_spread_x18 = 5;
  }
  